--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -106,3 +106,14 @@ password.policy.warningDays=30
 
 # URL to which the user will be redirected to change the passsword.
 password.policy.url=https://password.example.edu/change
+
+# dataBase 
+db.driverClassName=com.mysql.jdbc.Driver
+db.jdbcUrl=jdbc:mysql://localhost:3306/dledu_dev?useUnicode=true&amp;characterEncoding=UTF-8
+db.username=root
+db.password=mysql
+db.connectionTimeout=3000
+db.idleTimeout=600000
+db.maxLifetime=1800000
+db.maximumPoolSize=20
+db.minimumIdle=100
