rest产生tickets方式修改为自己的

--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,5 @@
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
     </repositories>
-    <description>cas-server实验室</description>
+    <description>cas-server-lab</description>
 </project>
