--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -111,7 +111,7 @@ password.policy.url=https://password.example.edu/change
 db.driverClassName=com.mysql.jdbc.Driver
 db.jdbcUrl=jdbc:mysql://localhost:3306/dledu_dev?useUnicode=true&amp;characterEncoding=UTF-8
 db.username=root
-db.password=mysql
+db.password= 
 db.connectionTimeout=3000
 db.idleTimeout=600000
 db.maxLifetime=1800000
