--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
-            <scope>test</scope>
+           <!--  <scope>test</scope> -->
         </dependency>
         
         <dependency>
