--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -109,7 +109,7 @@ password.policy.url=https://password.example.edu/change
 
 # dataBase 
 db.driverClassName=com.mysql.jdbc.Driver
-db.jdbcUrl=jdbc:mysql://localhost:3306/dledu_dev?useUnicode=true&amp;characterEncoding=UTF-8
+db.jdbcUrl=jdbc:mysql://localhost:3306/dledu_dev2?useUnicode=true&amp;characterEncoding=UTF-8
 db.username=root
 db.password= 
 db.connectionTimeout=3000
