提升并发性能

--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -695,9 +695,9 @@ log4j.config.location=/WEB-INF/log4j2.xml
 
 # dataBase 
 db.driverClassName=com.mysql.jdbc.Driver
-db.jdbcUrl=jdbc:mysql://172.16.*.*/dledu_dev?useUnicode=true&amp;characterEncoding=UTF-8
-db.username=*
-db.password=*
+db.jdbcUrl=jdbc:mysql://172.16.40.104/dledu_dev2?useUnicode=true&amp;characterEncoding=UTF-8
+db.username=root105
+db.password=Root105@2016
 db.connectionTimeout=30000
 db.idleTimeout=600000
 db.maxLifetime=1800000
@@ -707,7 +707,7 @@ db.minimumIdle=50
 #redis 
 #
 #redis.redis_database_num=  
-redis.host=172.16.*.*
+redis.host=172.16.40.104
 redis.password=  
 redis.port=6379
 redis.timeout=1800
