--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>com.github.water</groupId>
 	<packaging>war</packaging>
 	<version>0.0.1.0</version>
-	
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -141,11 +141,8 @@
 			<version>2.5.2</version>
 		</dependency>
 		<!-- 将TGT存入redis -->
-		<!-- <dependency>
-			<groupId>org.jasig.cas</groupId>
-			<artifactId>cas-server-support-rest</artifactId>
-			<version>${cas.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.jasig.cas</groupId> <artifactId>cas-server-support-rest</artifactId> 
+			<version>${cas.version}</version> </dependency> -->
 
 		<!-- spring-session-redis -->
 		<dependency>
@@ -163,12 +160,19 @@
 			<artifactId>commons-pool2</artifactId>
 			<version>2.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
 		<cas.version>4.2.0</cas.version>
 		<HikariCP.version>2.4.3</HikariCP.version>
 		<spring.version>4.2.3.RELEASE</spring.version>
+		<lombok.version>1.16.6</lombok.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
